force-app/main/default/objects/Legal_Advocacy_Matter__c/Legal_Advocacy_Matter__c.object-meta.xml
<CustomObject>
    <label>Legal Advocacy Matter</label>
    <nameField>
        <displayFormat>{YYYY}-{00000}</displayFormat>
        <label>Legal Advocacy Matter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Advocacy Matters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>