force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/Agency_Involved__c.field-meta.xml
<CustomField>
    <fullName>Agency_Involved__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Involved</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Legal Advocacy Matters (Agency Involved)</relationshipLabel>
    <relationshipName>Legal_Advocacy_Matters1</relationshipName>
    <type>Lookup</type>
</CustomField>