force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/Bill_Number__c.field-meta.xml
<CustomField>
    <fullName>Bill_Number__c</fullName>
    <label>Bill #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>