force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/Bill_Title__c.field-meta.xml
<CustomField>
    <fullName>Bill_Title__c</fullName>
    <label>Bill Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>