force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/Brief_Summary__c.field-meta.xml
<CustomField>
    <fullName>Brief_Summary__c</fullName>
    <inlineHelpText>This should be a brief summary of the complaint or issue for which legal services have been requested.  What happened?</inlineHelpText>
    <label>Brief Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>