force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/Complaint_Source__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Source__c</fullName>
    <label>Complaint Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Farm</fullName>
            </value>
            <value>
                <fullName>GR</fullName>
            </value>
            <value>
                <fullName>Puppy Mills</fullName>
            </value>
            <value>
                <fullName>FIR</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Other Animal Org</fullName>
            </value>
            <value>
                <fullName>Colleague</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
                <isActive>false</isActive>
                <label>Email</label>
            </value>
            <value>
                <fullName>Phone</fullName>
                <isActive>false</isActive>
                <label>Phone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>