force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Dependent on state. If you don’t know the county name, type “County” in this field and hit enter. A full list of counties for that state will display. This still works when states call political subdivisions something other than county (i.e. Parish).</inlineHelpText>
    <label>County</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>County__c.State__c</field>
            <operation>equals</operation>
            <valueField>$Source.State__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>County__c</referenceTo>
    <relationshipLabel>Legal Advocacy Matters</relationshipLabel>
    <relationshipName>Legal_Advocacy_Matters</relationshipName>
    <type>Lookup</type>
</CustomField>