force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/Court_Location__c.field-meta.xml
<CustomField>
    <fullName>Court_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Court Location (Federal Only)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Court_Location__c.Court_Name__c</field>
            <operation>equals</operation>
            <valueField>$Source.Court__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Court_Location__c</referenceTo>
    <relationshipLabel>Legal Advocacy Matters</relationshipLabel>
    <relationshipName>Legal_Advocacy_Matters</relationshipName>
    <type>Lookup</type>
</CustomField>