force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/Court_Name_Auto__c.field-meta.xml
<CustomField>
    <fullName>Court_Name_Auto__c</fullName>
    <formula>Court__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Court Name (Auto)</label>
    <type>Text</type>
</CustomField>