force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/Court_Name_State_Local_Only__c.field-meta.xml
<CustomField>
    <fullName>Court_Name_State_Local_Only__c</fullName>
    <label>Court Name (State/Local Only)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>