force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/Date_Filed__c.field-meta.xml
<CustomField>
    <fullName>Date_Filed__c</fullName>
    <inlineHelpText>This should be the date the action was originally filed in court.</inlineHelpText>
    <label>Date Filed</label>
    <type>Date</type>
</CustomField>