force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/Date_Opened__c.field-meta.xml
<CustomField>
    <fullName>Date_Opened__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <inlineHelpText>This should be the date the matter was brought to our attention.</inlineHelpText>
    <label>Date Opened</label>
    <type>Date</type>
</CustomField>