force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/District_Circuit__c.field-meta.xml
<CustomField>
    <fullName>District_Circuit__c</fullName>
    <inlineHelpText>State judicial districts are not in the database so this field will only be available if “federal” is the jurisdiction. If this is a federal matter, choose district or circuit.</inlineHelpText>
    <label>District/Circuit (Federal Only)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Jurisdiction__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>District</fullName>
            </value>
            <value>
                <fullName>Circuit</fullName>
            </value>
            <value>
                <fullName>SCOTUS</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>