force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/Docket_Number__c.field-meta.xml
<CustomField>
    <fullName>Docket_Number__c</fullName>
    <label>Docket Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>