force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/FIR_Case__c.field-meta.xml
<CustomField>
    <fullName>FIR_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FIR Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Legal Advocacy Matters</relationshipLabel>
    <relationshipName>Legal_Advocacy_Matters</relationshipName>
    <type>Lookup</type>
</CustomField>