force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/How_They_Heard_About_Us__c.field-meta.xml
<CustomField>
    <fullName>How_They_Heard_About_Us__c</fullName>
    <label>How They Heard About Us</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Referred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>