force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/If_yes_filed_date__c.field-meta.xml
<CustomField>
    <fullName>If_yes_filed_date__c</fullName>
    <label>If yes, filed date</label>
    <type>Date</type>
</CustomField>