force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <label>Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Animal Cruelty</fullName>
            </value>
            <value>
                <fullName>Animal Fighting</fullName>
            </value>
            <value>
                <fullName>Companion Animal</fullName>
            </value>
            <value>
                <fullName>Equine</fullName>
            </value>
            <value>
                <fullName>Farm</fullName>
            </value>
            <value>
                <fullName>Hoarding</fullName>
            </value>
            <value>
                <fullName>Puppy Mill</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Dangerous</fullName>
                <isActive>false</isActive>
                <label>Dangerous</label>
            </value>
            <value>
                <fullName>FOIA</fullName>
                <isActive>false</isActive>
                <label>FOIA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>