force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/Issue_Other__c.field-meta.xml
<CustomField>
    <fullName>Issue_Other__c</fullName>
    <inlineHelpText>If the Issue is “Other,” use this field to type what it is.</inlineHelpText>
    <label>Issue - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>