force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/Issue_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Issue_Subcategory__c</fullName>
    <label>Issue Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Issue__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ag-gag</fullName>
            </value>
            <value>
                <fullName>Aggravated Cruelty</fullName>
            </value>
            <value>
                <fullName>Breeder</fullName>
            </value>
            <value>
                <fullName>BSL</fullName>
            </value>
            <value>
                <fullName>Cellular Meat</fullName>
            </value>
            <value>
                <fullName>Chicken</fullName>
            </value>
            <value>
                <fullName>Citizen</fullName>
            </value>
            <value>
                <fullName>Cruelty</fullName>
            </value>
            <value>
                <fullName>Dangerous</fullName>
            </value>
            <value>
                <fullName>Dog</fullName>
            </value>
            <value>
                <fullName>FOIA</fullName>
            </value>
            <value>
                <fullName>Hoarding</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Labeling</fullName>
            </value>
            <value>
                <fullName>Neglect (shelter, water, food)</fullName>
            </value>
            <value>
                <fullName>Neglect (vet care)</fullName>
            </value>
            <value>
                <fullName>Pet Leasing</fullName>
            </value>
            <value>
                <fullName>Pet Store</fullName>
            </value>
            <value>
                <fullName>Preemption</fullName>
            </value>
            <value>
                <fullName>Public Comments</fullName>
            </value>
            <value>
                <fullName>Puppy Mill</fullName>
            </value>
            <value>
                <fullName>Registries</fullName>
            </value>
            <value>
                <fullName>Rescue/Sanctuary</fullName>
            </value>
            <value>
                <fullName>Rescue/Shelter</fullName>
            </value>
            <value>
                <fullName>Retail Sales Ban</fullName>
            </value>
            <value>
                <fullName>Rules</fullName>
            </value>
            <value>
                <fullName>Sexual Abuse</fullName>
            </value>
            <value>
                <fullName>Shelter</fullName>
            </value>
            <value>
                <fullName>Shelter Related</fullName>
            </value>
            <value>
                <fullName>Slaughter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>