force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <inlineHelpText>The lead assigned to this matter.</inlineHelpText>
    <label>Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Legal_Advocacy_Team</valueSetName>
    </valueSet>
</CustomField>