force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/Lead_Defendant__c.field-meta.xml
<CustomField>
    <fullName>Lead_Defendant__c</fullName>
    <inlineHelpText>List the first defendant only. All contacts should be added to the matter.</inlineHelpText>
    <label>Lead Defendant</label>
    <length>100</length>
    <type>Text</type>
</CustomField>