force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/Lead_Plaintiff__c.field-meta.xml
<CustomField>
    <fullName>Lead_Plaintiff__c</fullName>
    <inlineHelpText>List the first plaintiff only. All contacts should be added to the matter.</inlineHelpText>
    <label>Lead Plaintiff</label>
    <length>100</length>
    <type>Text</type>
</CustomField>