force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/Legislation_Filed__c.field-meta.xml
<CustomField>
    <fullName>Legislation_Filed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legislation Filed</label>
    <type>Checkbox</type>
</CustomField>