force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/Matter_Box_Link__c.field-meta.xml
<CustomField>
    <fullName>Matter_Box_Link__c</fullName>
    <label>Matter Box Link</label>
    <type>Url</type>
</CustomField>