force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/Matter_Time_Expense__c.field-meta.xml
<CustomField>
    <fullName>Matter_Time_Expense__c</fullName>
    <label>Matter Time Expense</label>
    <summarizedField>Matter_Update__c.Total_Cost__c</summarizedField>
    <summaryForeignKey>Matter_Update__c.Legal_Advocacy_Matter__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>