force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/Number_of_Animals_Reported__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Animals_Reported__c</fullName>
    <label>Number of Animals Reported</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>