force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/Other_Matter_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Other_Matter_Expenses__c</fullName>
    <label>Other Matter Expenses</label>
    <summarizedField>Matter_Expense__c.Invoice_Amount__c</summarizedField>
    <summaryForeignKey>Matter_Expense__c.Legal_Advocacy_Matter__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>