force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/Previous_Bill_Number__c.field-meta.xml
<CustomField>
    <fullName>Previous_Bill_Number__c</fullName>
    <label>Previous Bill Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>