force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/Previous_History_Comments__c.field-meta.xml
<CustomField>
    <fullName>Previous_History_Comments__c</fullName>
    <label>Previous History Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>