force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/Previous_Versions__c.field-meta.xml
<CustomField>
    <fullName>Previous_Versions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Previous Versions</label>
    <type>Checkbox</type>
</CustomField>