force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/Primary_Species__c.field-meta.xml
<CustomField>
    <fullName>Primary_Species__c</fullName>
    <inlineHelpText>Choose the selection that most narrowly defines the species.</inlineHelpText>
    <label>Primary Species</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dog</fullName>
            </value>
            <value>
                <fullName>Cat</fullName>
            </value>
            <value>
                <fullName>Equine</fullName>
            </value>
            <value>
                <fullName>Chicken (fighting inc. hens)</fullName>
            </value>
            <value>
                <fullName>Fowl (non-fighting)</fullName>
            </value>
            <value>
                <fullName>Rabbit</fullName>
            </value>
            <value>
                <fullName>Exotic</fullName>
            </value>
            <value>
                <fullName>Livestock</fullName>
            </value>
            <value>
                <fullName>Wildlife</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>All</fullName>
                <isActive>false</isActive>
                <label>All</label>
            </value>
            <value>
                <fullName>Cattle</fullName>
                <isActive>false</isActive>
                <label>Cattle</label>
            </value>
            <value>
                <fullName>Companion - Other</fullName>
                <isActive>false</isActive>
                <label>Companion - Other</label>
            </value>
            <value>
                <fullName>Cow</fullName>
                <isActive>false</isActive>
                <label>Cow</label>
            </value>
            <value>
                <fullName>Equine - All</fullName>
                <isActive>false</isActive>
                <label>Equine - All</label>
            </value>
            <value>
                <fullName>Equine - Farm</fullName>
                <isActive>false</isActive>
                <label>Equine - Farm</label>
            </value>
            <value>
                <fullName>Equine - Wild</fullName>
                <isActive>false</isActive>
                <label>Equine - Wild</label>
            </value>
            <value>
                <fullName>Farm - All</fullName>
                <isActive>false</isActive>
                <label>Farm - All</label>
            </value>
            <value>
                <fullName>Farm - Hog</fullName>
                <isActive>false</isActive>
                <label>Farm - Hog</label>
            </value>
            <value>
                <fullName>Farm - Other</fullName>
                <isActive>false</isActive>
                <label>Farm - Other</label>
            </value>
            <value>
                <fullName>Pig</fullName>
                <isActive>false</isActive>
                <label>Pig</label>
            </value>
            <value>
                <fullName>Poultry</fullName>
                <isActive>false</isActive>
                <label>Poultry</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>