force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/Primary_Species_Detail__c.field-meta.xml
<CustomField>
    <fullName>Primary_Species_Detail__c</fullName>
    <inlineHelpText>If the Primary Species is Livestock, Exotic, Wildlife or Other, use this field to provide details on specific number and species.</inlineHelpText>
    <label>Primary Species Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>