force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/Related_Matter__c.field-meta.xml
<CustomField>
    <fullName>Related_Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Matter Group</label>
    <referenceTo>Related_Matters__c</referenceTo>
    <relationshipLabel>Related Matters</relationshipLabel>
    <relationshipName>Legal_Advocacy_Matters</relationshipName>
    <type>Lookup</type>
</CustomField>