force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/Secondary_Status__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Status__c</fullName>
    <label>Secondary Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fact Development</fullName>
            </value>
            <value>
                <fullName>Disposition Proceeding</fullName>
            </value>
            <value>
                <fullName>Trial Court</fullName>
            </value>
            <value>
                <fullName>Court of Appeals</fullName>
            </value>
            <value>
                <fullName>All Defendants Convicted</fullName>
            </value>
            <value>
                <fullName>Arbitration</fullName>
            </value>
            <value>
                <fullName>Supreme Court</fullName>
            </value>
            <value>
                <fullName>Trial Verdict - Won</fullName>
            </value>
            <value>
                <fullName>Trial Verdict - Lost</fullName>
            </value>
            <value>
                <fullName>Settlement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>