force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Appeal</fullName>
                <isActive>false</isActive>
                <label>Appeal</label>
            </value>
            <value>
                <fullName>Court Pending</fullName>
                <isActive>false</isActive>
                <label>Court Pending</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Investigation</fullName>
                <isActive>false</isActive>
                <label>Investigation</label>
            </value>
            <value>
                <fullName>Pre-Litigation</fullName>
                <isActive>false</isActive>
                <label>Pre-Litigation</label>
            </value>
            <value>
                <fullName>Trial Court</fullName>
                <isActive>false</isActive>
                <label>Trial Court</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>