force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/Total_Matter_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Matter_Expenses__c</fullName>
    <formula>Matter_Time_Expense__c +  Other_Matter_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Matter Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>