force-app/main/default/objects/Legal_Advocacy_Matter__c/fields/Type_of_Legislation__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Legislation__c</fullName>
    <label>Type of Legislation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>