force-app/main/default/objects/Legal_Advocacy_Matter__c/recordTypes/Amicus.recordType-meta.xml
<RecordType>
    <fullName>Amicus</fullName>
    <active>true</active>
    <label>Amicus</label>
</RecordType>