force-app/main/default/objects/Legal_Advocacy_Matter__c/recordTypes/Civil_Litigation.recordType-meta.xml
<RecordType>
    <fullName>Civil_Litigation</fullName>
    <active>true</active>
    <label>Civil Litigation</label>
</RecordType>