force-app/main/default/objects/Legal_Advocacy_Matter__c/recordTypes/Criminal.recordType-meta.xml
<RecordType>
    <fullName>Criminal</fullName>
    <active>true</active>
    <label>Criminal</label>
</RecordType>