force-app/main/default/objects/Legal_Advocacy_Matter__c/recordTypes/Legislation.recordType-meta.xml
<RecordType>
    <fullName>Legislation</fullName>
    <active>true</active>
    <label>Legislation</label>
</RecordType>