force-app/main/default/objects/Legal_Advocacy_Matter__c/recordTypes/Tracking.recordType-meta.xml
<RecordType>
    <fullName>Tracking</fullName>
    <active>true</active>
    <label>Tracking</label>
</RecordType>