force-app/main/default/objects/Legal_Advocacy_Matter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead_Plaintiff__c</columns>
    <columns>Lead_Defendant__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Docket_Number__c</columns>
    <columns>Issue_Subcategory__c</columns>
    <columns>Brief_Summary__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>